--- a/README.Rmd
+++ b/README.Rmd
@@ -72,7 +72,7 @@ The *initScenario()* function combines the user settings with the data into an *
 <img width="673.4" height="298.2" src="./man/figures/exampleGraphic.png">
 </p>
 
--   *uValue*: The argument for the uncertainty level ($f_u$, equation 4 in Husmann et al. (n.d.)). A higher uValue reflects a higher risk aversion of the decision maker. See the help file of the *initScenario* function for more details.
+-   *uValue*: The argument for the uncertainty level ($f_u$, Equation 4 in Husmann et al. (n.d.)). A higher uValue reflects a higher risk aversion of the decision maker. See the help file of the *initScenario* function for more details.
 
 -   *optimisticRule*: Specifies whether the optimistic contributions of each indicator should be defined either directly by their average, or by their average plus their uncertainty (if more is better) or minus its uncertainty (if less is better). The former option is most frequently used in recent literature and therefore builds the default.
 
@@ -92,11 +92,11 @@ The returned *list with results* contains different Information of the optimizat
 -   *scenarioTable*: Data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of rows equals the number of scenarios $N_S$ in Husmann et al (n.d.)). The columns contain relevant calculation steps of the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al. (n.d.)). *minAdjSem* are the minimal uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximal uncertainty adjusted indicators. diffAdjSem are the range between these uncertainties adjusted indicators $\delta_{\text{min,max}_{iu}}$.
 -   *coefObjective*: The optimization program is translated into a linear program with $N_L$ (number of land-cover options) coefficients for the inner solution. The inner solution is solved using the *lpSolveAPI()* function of the **lpSolveApi** package. *coefObjective* is the data frame that contains these coefficients.
 -   *coefConstraing*: A data frame with the respective constraints for the inner solution solved by *lpsolveAPI()*.
--   *distances*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See equation 3 in Husmann et al. (n.d.).
+-   *distances*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See Equation 3 in Husmann et al. (n.d.).
 
 This is followed by a summary of the results of the optimization:
 
--   *β*: The maximum distance of the worst performing scenario (equation 1 in Husmann et al. (n.d.)).
+-   *β*: The maximum distance of the worst performing scenario (Equation 1 in Husmann et al. (n.d.)).
 -   *landUse*: The resulting land-cover composition in the optimum.
 
 #### Post-Processing
@@ -142,7 +142,7 @@ init <- initScenario(coefTable = dat,
                      # 3 is the default
 ```
 
-In line with Gosling et al. (2020), we chose the expected value of the indicator as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see equations 4 and 9 in Husmann et al. (n.d.) for more details).
+In line with Gosling et al. (2020), we chose the expected value of the indicator as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al. (n.d.) for more details).
 
 ### Solving the Initialized *optimLanduse* Object
 
@@ -314,7 +314,7 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 5: Theoretically ideal farm compositions under increasing levels of uncertainty.*
 
-Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al., n.d.)) gives the sensitivity of the land-cover compositions towards increasing risk aversion of the farmer. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
+Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 (Husmann et al., n.d.)) gives the sensitivity of the land-cover compositions towards increasing risk aversion of the farmer. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
 
 Alley cropping does not appear in any portfolio at any uncertainty level. Alley cropping does, on average, not contribute best to any indicator. At least one other land-cover type better provides each indicator. It also contributes the worst (highest) to management complexity.  This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e. scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. It only provides best to the long-term income while providing by far worst to the general preferences and also providing generally only minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking, however, changes after uncertainty levels above 1.5. The worst-possible contribution of forests then contributes worst among all land-cover types.
 
@@ -460,7 +460,12 @@ The third example is composed of a bundle of indicators that prospectively refle
 
 ### The use of fixDistance
 
-It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{iu}$ (equation 5 in Husmann et al. (n.d.), see also equation 9). *CP: Mit dem folgenden Satz tue ich mich sehr scchwer... Vielleicht sowas wie: For instance by using an uncertainty level of 3 the uncertainty space becomes larger, while the uncertainty space remains constant.... and thus leads to... VVG: Hier im Satz von Carola stimmt was nicht oder? der uncertainty space kann ja nicht "lager" und "remains constant" gleichzeitig abdecken* The broadened uncertainty space allows for a broader state space of the distances $d_{ij}$, which usually leads to smoother transitions between the portfolios <!--(*CP: between what?*)--> when the uncertainty values are raised. The disadvantage is that the distances cannot be interpreted straightforwardly any more. The different uncertainty spaces considered in the denominator and the counter of equation 3 (Husmann et al., n.d.) do not normalize the distance to \{0, 1\} anymore. <!--(*CP:do? An dem Satz ist was komisch*)--> 
+It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al. (n.d.), see also Equation 9). Too narrow uncertainty space of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$ to cover combinations land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under raising uncertainty values are smoother. Disadvantage of distinct uncertainty spaces is that the distances cannot be interpreted straightforwardly any more. The different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) lead to distances that are not inevitably in the inverval \{0, 1\} anymore. 
+
+
+*CP: Mit dem folgenden Satz tue ich mich sehr scchwer... Vielleicht sowas wie: For instance by using an uncertainty level of 3 the uncertainty space becomes larger, while the uncertainty space remains constant.... and thus leads to... VVG: Hier im Satz von Carola stimmt was nicht oder? der uncertainty space kann ja nicht "lager" und "remains constant" gleichzeitig abdecken* 
+
+
 
 
 ```{r, fig.height = 5, fig.width = 7}
@@ -501,7 +506,7 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 *Fig. 10: Theoretically ideal farm compositions using the fixDistance argument and increasing levels of uncertainty.*
 
 *CP: Hier ist auch was komisch*
-It can be seen that the land-cover allocation transition under raising uncertainty (Fig. 10) differs slightly from the multi-functional scenario shown above (Fig. 2). The here broadened state space leads an earlier increase of pasture (*CP: Ist hier gemeint: leads to selection of a larger share of pasture under low uncertainty levels as compared to...*).
+It can be seen that the land-cover allocation transition under increasing uncertainty levels (Fig. 10) differs slightly from the multi-functional scenario shown above (Fig. 2). The here broadened state space leads a higher share of pasture under low uncertainty levels as compared to the multi-functional portfolio above (Fig. 5).
 
 
 <h3>
